# agent-system

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  pr40_changes_summary.md  pr40_review.md
.agents/skills/: 97-dev  dev-experts  golang-pro  polars-expertise  venue-expert
.claude-plugin/: marketplace.json
.codex/: config.toml
.codex/agents/: architect.toml  book-physicist.toml  causal-detective.toml  cpp-dev.toml  cpp-hunter.toml  (+16 more)
97-dev/: SKILL.md
alpha-squad/: README.md  SKILL.md
arxiv-search/: SKILL.md
bug-hunters/: README.md  SKILL.md
chain-system/: README.md  SKILL.md
cost-status/: README.md  SKILL.md
dev-experts/: README.md  SKILL.md
mft-research-experts/: README.md  SKILL.md
nautilus-crypto-hft/: SKILL.md
nautilus-docs/: REBUILD.md  SKILL.md  battle_tested.md
nautilus-hft-dev/: SKILL.md
nautilus-trader/: SKILL.md
polars-expertise/: SKILL.md
quarto/: SKILL.md
research-experts/: EXCHANGE_CONTEXT.md  README.md  SKILL.md
research-validators/: README.md
scripts/: install.sh
skill-activation-hooks/: README.md  plugin.json
tests/nautilus-verify/: Cargo.toml  pyproject.toml  verify.sh
tests/nautilus-verify/python/: conftest.py  test_anti_hallucination.py  test_backtest_config.py  test_constructors.py  test_custom_data.py  test_custom_indicator.py  test_order_book.py
tests/nautilus-verify/src/: lib.rs
tests/nautilus-verify/tests/: anti_hallucination.rs  crate_map.rs  data_actor_pattern.rs  strategy_pattern.rs
tmux/: README.md  SKILL.md  reference.md
venue-expert/: CONTRIBUTING.md  README.md  SKILL.md
(+239 files in other folders)
