[package]
name = "nautilus-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
nautilus-model = { git = "https://github.com/nautechsystems/nautilus_trader.git", tag = "v1.224.0" }
nautilus-common = { git = "https://github.com/nautechsystems/nautilus_trader.git", tag = "v1.224.0" }
nautilus-trading = { git = "https://github.com/nautechsystems/nautilus_trader.git", tag = "v1.224.0" }
nautilus-binance = { git = "https://github.com/nautechsystems/nautilus_trader.git", tag = "v1.224.0" }
nautilus-live = { git = "https://github.com/nautechsystems/nautilus_trader.git", tag = "v1.224.0" }
anyhow = "1"
log = "0.4"
